--- a/atuacao.html
+++ b/atuacao.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Atuação | All Luminum</title>
 
-  <meta name="description" content="Veja as áreas de atuação da All Luminum e como nossas soluções em alumínio atendem diferentes segmentos industriais.">
+  <meta name="description" content="A All Luminum atua no desenvolvimento de soluções industriais em alumínio para diferentes segmentos e aplicações técnicas.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,13 +13,55 @@
 <header id="header"></header>
 
 <main>
-  <h1>Atuação</h1>
 
-  <p>
-    Atuamos com soluções em alumínio para diferentes demandas industriais,
-    respeitando critérios técnicos, funcionais e produtivos.
-  </p>
+  <section>
+    <h1>Atuação</h1>
+
+    <p>
+      A All Luminum atua no fornecimento de soluções industriais em alumínio,
+      atendendo empresas que demandam componentes, estruturas e aplicações
+      com critérios técnicos bem definidos.
+    </p>
+
+    <p>
+      Nossa atuação é direcionada a projetos que exigem precisão dimensional,
+      resistência mecânica e confiabilidade no uso contínuo.
+    </p>
+  </section>
+
+  <section>
+    <h2>Segmentos Atendidos</h2>
+
+    <ul>
+      <li>Indústria em geral</li>
+      <li>Estruturas e perfis técnicos em alumínio</li>
+      <li>Soluções industriais sob medida</li>
+      <li>Aplicações funcionais e estruturais</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Modelo de Trabalho</h2>
+
+    <p>
+      Atuamos de forma consultiva, analisando a necessidade do cliente,
+      o ambiente de aplicação e os requisitos técnicos antes da definição
+      da solução final.
+    </p>
+
+    <p>
+      Isso garante maior eficiência no processo produtivo e melhor desempenho
+      do produto entregue.
+    </p>
+  </section>
+
 </main>
+
+<footer>
+  <p><strong>All Luminum</strong></p>
+  <p>São Carlos – SP – Brasil</p>
+  <p>Email: vendas@allluminumbr.com</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
