--- a/processos.html
+++ b/processos.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Processos Industriais | All Luminum</title>
+  <title>Processos | All Luminum</title>
 
-  <meta name="description" content="Entenda os processos industriais da All Luminum aplicados à produção em alumínio com foco em qualidade e eficiência.">
+  <meta name="description" content="Conheça os processos industriais da All Luminum, estruturados para garantir qualidade, padronização e desempenho.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,13 +13,47 @@
 <header id="header"></header>
 
 <main>
-  <h1>Processos</h1>
 
-  <p>
-    Nossos processos industriais são estruturados para garantir padronização,
-    desempenho técnico e confiabilidade em soluções de alumínio.
-  </p>
+  <section>
+    <h1>Processos Industriais</h1>
+
+    <p>
+      Os processos da All Luminum são estruturados para garantir controle,
+      repetibilidade e qualidade técnica em todas as etapas produtivas.
+    </p>
+  </section>
+
+  <section>
+    <h2>Metodologia</h2>
+
+    <p>
+      Trabalhamos com processos bem definidos, desde a análise da demanda,
+      definição do projeto, escolha do material até a execução e inspeção final.
+    </p>
+
+    <p>
+      Essa metodologia reduz falhas, otimiza tempo produtivo e garante
+      confiabilidade no produto final.
+    </p>
+  </section>
+
+  <section>
+    <h2>Qualidade</h2>
+
+    <p>
+      O controle de qualidade é parte integrante do nosso processo,
+      assegurando que cada solução entregue atenda aos critérios técnicos
+      acordados com o cliente.
+    </p>
+  </section>
+
 </main>
+
+<footer>
+  <p><strong>All Luminum</strong></p>
+  <p>São Carlos – SP – Brasil</p>
+  <p>Email: vendas@allluminumbr.com</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
