--- a/empresa.html
+++ b/empresa.html
@@ -2,62 +2,58 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum</title>
-
-  <meta name="description" content="Conheça a All Luminum, sua história, valores e posicionamento no mercado de soluções industriais em alumínio.">
-
+  <title>Empresa | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header id="header"></header>
+<header>
+  <div class="container">
+    <div class="logo">All Luminum Br</div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
 <main>
-
   <section>
     <h1>Quem Somos</h1>
 
     <p>
-      A All Luminum é uma empresa brasileira especializada em soluções industriais
-      em alumínio, atuando com foco em qualidade técnica, padronização de processos
-      e eficiência produtiva.
+      A <strong>All Luminum Br</strong> nasce com foco em excelência industrial,
+      precisão técnica e compromisso absoluto com qualidade.
+      Atuamos no segmento de alumínio atendendo demandas industriais,
+      construtivas e técnicas com alto padrão de confiabilidade.
     </p>
 
     <p>
-      Nascemos com o propósito de atender demandas industriais que exigem precisão,
-      resistência, confiabilidade e acabamento técnico, utilizando o alumínio
-      como matéria-prima estratégica para diferentes aplicações.
+      Nossa estrutura é pensada para entregar soluções consistentes,
+      com processos claros, controle rigoroso e visão de longo prazo.
+      Não trabalhamos com improviso. Trabalhamos com método.
     </p>
 
     <p>
-      Nossa atuação é guiada por critérios industriais claros: processo bem definido,
-      controle de qualidade rigoroso e entrega alinhada às necessidades reais do cliente.
+      A All Luminum Br foi criada para atender empresas que exigem
+      seriedade, prazo, segurança técnica e acabamento correto,
+      mantendo uma relação transparente com clientes e parceiros.
     </p>
   </section>
-
-  <section>
-    <h2>Posicionamento</h2>
-
-    <p>
-      A All Luminum não atua como um fornecedor genérico. Nosso posicionamento é técnico,
-      industrial e orientado a processo. Cada solução desenvolvida parte da análise do uso,
-      da função e do desempenho esperado.
-    </p>
-
-    <p>
-      Trabalhamos para ser um parceiro industrial confiável, capaz de entregar soluções
-      consistentes, repetíveis e alinhadas aos padrões exigidos pelo mercado.
-    </p>
-  </section>
-
 </main>
 
 <footer>
-  <p><strong>All Luminum</strong></p>
+  <p><strong>All Luminum Br</strong></p>
   <p>São Carlos – SP – Brasil</p>
-  <p>Email: vendas@allluminumbr.com</p>
+  <p>📞 (16) 99785-7531</p>
+  <p>✉️ vendas@allluminumbr.com</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
