--- a/atuacao.html
+++ b/atuacao.html
@@ -2,67 +2,59 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | All Luminum</title>
-
-  <meta name="description" content="A All Luminum atua no desenvolvimento de soluções industriais em alumínio para diferentes segmentos e aplicações técnicas.">
-
+  <title>Atuação | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header id="header"></header>
+<header>
+  <div class="container">
+    <div class="logo">All Luminum Br</div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
 <main>
-
   <section>
-    <h1>Atuação</h1>
+    <h1>Atuação e Soluções</h1>
 
     <p>
-      A All Luminum atua no fornecimento de soluções industriais em alumínio,
-      atendendo empresas que demandam componentes, estruturas e aplicações
-      com critérios técnicos bem definidos.
+      A All Luminum Br atua no fornecimento e desenvolvimento de soluções
+      em alumínio para diferentes aplicações industriais e estruturais.
     </p>
 
-    <p>
-      Nossa atuação é direcionada a projetos que exigem precisão dimensional,
-      resistência mecânica e confiabilidade no uso contínuo.
-    </p>
-  </section>
-
-  <section>
-    <h2>Segmentos Atendidos</h2>
+    <h2>Principais frentes de atuação</h2>
 
     <ul>
-      <li>Indústria em geral</li>
-      <li>Estruturas e perfis técnicos em alumínio</li>
-      <li>Soluções industriais sob medida</li>
-      <li>Aplicações funcionais e estruturais</li>
+      <li>Perfis de alumínio industriais</li>
+      <li>Soluções estruturais em alumínio</li>
+      <li>Atendimento técnico especializado</li>
+      <li>Fornecimento sob especificação</li>
+      <li>Parcerias industriais</li>
     </ul>
-  </section>
-
-  <section>
-    <h2>Modelo de Trabalho</h2>
 
     <p>
-      Atuamos de forma consultiva, analisando a necessidade do cliente,
-      o ambiente de aplicação e os requisitos técnicos antes da definição
-      da solução final.
-    </p>
-
-    <p>
-      Isso garante maior eficiência no processo produtivo e melhor desempenho
-      do produto entregue.
+      Nosso foco é atender empresas que valorizam controle técnico,
+      padronização e confiança operacional.
     </p>
   </section>
-
 </main>
 
 <footer>
-  <p><strong>All Luminum</strong></p>
+  <p><strong>All Luminum Br</strong></p>
   <p>São Carlos – SP – Brasil</p>
-  <p>Email: vendas@allluminumbr.com</p>
+  <p>📞 (16) 99785-7531</p>
+  <p>✉️ vendas@allluminumbr.com</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
