--- a/processos.html
+++ b/processos.html
@@ -2,59 +2,61 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Processos | All Luminum</title>
-
-  <meta name="description" content="Conheça os processos industriais da All Luminum, estruturados para garantir qualidade, padronização e desempenho.">
-
+  <title>Processos | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header id="header"></header>
+<header>
+  <div class="container">
+    <div class="logo">All Luminum Br</div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
 <main>
-
   <section>
-    <h1>Processos Industriais</h1>
+    <h1>Nossos Processos</h1>
 
     <p>
-      Os processos da All Luminum são estruturados para garantir controle,
-      repetibilidade e qualidade técnica em todas as etapas produtivas.
+      A All Luminum Br opera com processos definidos,
+      controlados e documentados.
+      Cada etapa é pensada para garantir padrão, segurança
+      e repetibilidade.
+    </p>
+
+    <h2>Etapas principais</h2>
+
+    <ul>
+      <li>Análise técnica da demanda</li>
+      <li>Definição de especificações</li>
+      <li>Controle de fornecimento</li>
+      <li>Verificação de qualidade</li>
+      <li>Entrega conforme padrão acordado</li>
+    </ul>
+
+    <p>
+      Nosso compromisso é com a previsibilidade.
+      O cliente sabe exatamente o que recebe.
     </p>
   </section>
-
-  <section>
-    <h2>Metodologia</h2>
-
-    <p>
-      Trabalhamos com processos bem definidos, desde a análise da demanda,
-      definição do projeto, escolha do material até a execução e inspeção final.
-    </p>
-
-    <p>
-      Essa metodologia reduz falhas, otimiza tempo produtivo e garante
-      confiabilidade no produto final.
-    </p>
-  </section>
-
-  <section>
-    <h2>Qualidade</h2>
-
-    <p>
-      O controle de qualidade é parte integrante do nosso processo,
-      assegurando que cada solução entregue atenda aos critérios técnicos
-      acordados com o cliente.
-    </p>
-  </section>
-
 </main>
 
 <footer>
-  <p><strong>All Luminum</strong></p>
+  <p><strong>All Luminum Br</strong></p>
   <p>São Carlos – SP – Brasil</p>
-  <p>Email: vendas@allluminumbr.com</p>
+  <p>📞 (16) 99785-7531</p>
+  <p>✉️ vendas@allluminumbr.com</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
