--- a/index.html
+++ b/index.html
@@ -2,25 +2,54 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum | Soluções em Alumínio Industrial</title>
-
-  <meta name="description" content="A All Luminum atua com soluções em alumínio industrial, processos produtivos eficientes e qualidade técnica aplicada à indústria.">
-
+  <title>All Luminum Br | Alumínio Industrial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header id="header"></header>
+<header>
+  <div class="container">
+    <div class="logo">All Luminum Br</div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="processos.html">Processos</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="hero-overlay">
+    <h1>Alumínio Industrial com Processo, Controle e Confiabilidade</h1>
+    <p>
+      Soluções em alumínio voltadas para empresas que exigem padrão técnico,
+      previsibilidade e compromisso industrial.
+    </p>
+  </div>
+</section>
 
 <main>
-  <h1>Todo em Alumínio</h1>
-
-  <p>
-    A All Luminum desenvolve soluções em alumínio com foco em processos industriais,
-    padronização técnica e desempenho produtivo.
-  </p>
+  <section>
+    <h2>Estrutura Industrial</h2>
+    <p>
+      A All Luminum Br atua com foco em soluções industriais em alumínio,
+      oferecendo atendimento técnico, fornecimento estruturado
+      e compromisso com qualidade.
+    </p>
+  </section>
 </main>
 
-<script src="script.js"></script>
+<footer>
+  <p><strong>All Luminum Br</strong></p>
+  <p>São Carlos – SP – Brasil</p>
+  <p>📞 (16) 99999-9999</p>
+  <p>✉️ vendas@allluminumbr.com</p>
+</footer>
+
 </body>
 </html>
