--- a/atuacao.html
+++ b/atuacao.html
@@ -50,11 +50,11 @@
 </main>
 
 <footer>
-  <p><strong>All Luminum Br</strong></p>
-  <p>São Carlos – SP – Brasil</p>
-  <p>📞 (16) 99785-7531</p>
-  <p>✉️ vendas@allluminumbr.com</p>
+  <p>
+    All Luminum Br CNPJ: 57.084.413/0001-19 |
+    📞 (16) 99785-7531 |
+    ✉️ vendas@allluminumbr.com |
+    São Carlos – SP – Brasil |
+    Todos os direitos reservados.
+  </p>
 </footer>
-
-</body>
-</html>
