--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum Br | Alumínio Industrial</title>
+  <title>All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-  <div class="container">
+  <div class="header-container">
     <div class="logo">All Luminum Br</div>
     <nav>
       <ul>
@@ -24,32 +24,26 @@
 </header>
 
 <section class="hero">
-  <div class="hero-overlay">
-    <h1>Alumínio Industrial com Processo, Controle e Confiabilidade</h1>
+  <div class="hero-content">
+    <h1>Excelência em Alumínio Industrial</h1>
     <p>
-      Soluções em alumínio voltadas para empresas que exigem padrão técnico,
-      previsibilidade e compromisso industrial.
+      Soluções industriais com precisão técnica, alto padrão de qualidade
+      e compromisso com performance.
     </p>
   </div>
 </section>
 
-<main>
-  <section>
-    <h2>Estrutura Industrial</h2>
-    <p>
-      A All Luminum Br atua com foco em soluções industriais em alumínio,
-      oferecendo atendimento técnico, fornecimento estruturado
-      e compromisso com qualidade.
-    </p>
-  </section>
-</main>
-
 <footer>
-  <p>
-    All Luminum Br CNPJ: 57.084.413/0001-19 |
-    📞 (16) 99785-7531 |
-    ✉️ vendas@allluminumbr.com |
-    São Carlos – SP – Brasil |
-    Todos os direitos reservados.
-  </p>
+  All Luminum Br CNPJ: 57.084.413/0001-19 |
+  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil |
+  Todos os direitos reservados.
 </footer>
+
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
+  WhatsApp
+</a>
+
+</body>
+</html>
