--- a/empresa.html
+++ b/empresa.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum Br</title>
+  <title>Empresa - All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-  <div class="container">
+  <div class="header-container">
     <div class="logo">All Luminum Br</div>
     <nav>
       <ul>
@@ -23,38 +23,36 @@
   </div>
 </header>
 
-<main>
-  <section>
-    <h1>Quem Somos</h1>
+<section class="section">
+  <h2>Sobre a All Luminum</h2>
+  <p>
+    A All Luminum Br atua no setor industrial com foco em alumínio,
+    oferecendo soluções com alto padrão técnico, controle de qualidade
+    e compromisso com eficiência produtiva.
+  </p>
 
-    <p>
-      A <strong>All Luminum Br</strong> nasce com foco em excelência industrial,
-      precisão técnica e compromisso absoluto com qualidade.
-      Atuamos no segmento de alumínio atendendo demandas industriais,
-      construtivas e técnicas com alto padrão de confiabilidade.
-    </p>
+  <p>
+    Nossa estrutura foi planejada para atender demandas industriais com
+    organização, rastreabilidade e processos bem definidos.
+  </p>
 
-    <p>
-      Nossa estrutura é pensada para entregar soluções consistentes,
-      com processos claros, controle rigoroso e visão de longo prazo.
-      Não trabalhamos com improviso. Trabalhamos com método.
-    </p>
-
-    <p>
-      A All Luminum Br foi criada para atender empresas que exigem
-      seriedade, prazo, segurança técnica e acabamento correto,
-      mantendo uma relação transparente com clientes e parceiros.
-    </p>
-  </section>
-</main>
+  <p>
+    Trabalhamos com visão estratégica, responsabilidade técnica e foco
+    em relações comerciais duradouras.
+  </p>
+</section>
 
 <footer>
-  <p>
-    All Luminum Br CNPJ: 57.084.413/0001-19 |
-    📞 (16) 99785-7531 |
-    ✉️ vendas@allluminumbr.com |
-    São Carlos – SP – Brasil |
-    Todos os direitos reservados.
-  </p>
+  All Luminum Br CNPJ: 57.084.413/0001-19 |
+  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil |
+  Todos os direitos reservados.
 </footer>
 
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
+  WhatsApp
+</a>
+
+</body>
+</html>
