--- a/atuacao.html
+++ b/atuacao.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | All Luminum Br</title>
+  <title>Atuação - All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,8 +10,10 @@
 <body>
 
 <header>
-  <div class="container">
-    <div class="logo">All Luminum Br</div>
+  <div class="header-container">
+    <a href="index.html" class="logo">
+      <img src="assets/imagens/logo-allluminumbr.png" alt="All Luminum Br" height="40">
+    </a>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
@@ -23,38 +25,38 @@
   </div>
 </header>
 
-<main>
-  <section>
-    <h1>Atuação e Soluções</h1>
+<section class="section">
+  <h2>Área de Atuação</h2>
 
-    <p>
-      A All Luminum Br atua no fornecimento e desenvolvimento de soluções
-      em alumínio para diferentes aplicações industriais e estruturais.
-    </p>
+  <p>
+    A All Luminum Br atua no fornecimento e comercialização de alumínio
+    para aplicações industriais diversas.
+  </p>
 
-    <h2>Principais frentes de atuação</h2>
+  <p>
+    Atendemos empresas dos setores metalúrgico, construção civil,
+    indústria de transformação e segmentos que demandam matéria-prima
+    com controle dimensional e rastreabilidade.
+  </p>
 
-    <ul>
-      <li>Perfis de alumínio industriais</li>
-      <li>Soluções estruturais em alumínio</li>
-      <li>Atendimento técnico especializado</li>
-      <li>Fornecimento sob especificação</li>
-      <li>Parcerias industriais</li>
-    </ul>
+  <p>
+    Trabalhamos com foco em qualidade, entrega eficiente e suporte técnico,
+    garantindo segurança operacional e confiabilidade comercial.
+  </p>
 
-    <p>
-      Nosso foco é atender empresas que valorizam controle técnico,
-      padronização e confiança operacional.
-    </p>
-  </section>
-</main>
+</section>
 
 <footer>
-  <p>
-    All Luminum Br CNPJ: 57.084.413/0001-19 |
-    📞 (16) 99785-7531 |
-    ✉️ vendas@allluminumbr.com |
-    São Carlos – SP – Brasil |
-    Todos os direitos reservados.
-  </p>
+  All Luminum Br CNPJ: 57.084.413/0001-19 |
+  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil |
+  Todos os direitos reservados.
 </footer>
+
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
+  WhatsApp
+</a>
+
+</body>
+</html>
