--- a/processos.html
+++ b/processos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Processos | All Luminum Br</title>
+  <title>Processos - All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,8 +10,10 @@
 <body>
 
 <header>
-  <div class="container">
-    <div class="logo">All Luminum Br</div>
+  <div class="header-container">
+    <a href="index.html" class="logo">
+      <img src="assets/imagens/logo-allluminumbr.png" alt="All Luminum Br" height="40">
+    </a>
     <nav>
       <ul>
         <li><a href="index.html">Início</a></li>
@@ -23,40 +25,40 @@
   </div>
 </header>
 
-<main>
-  <section>
-    <h1>Nossos Processos</h1>
+<section class="section">
+  <h2>Processos e Qualidade</h2>
 
-    <p>
-      A All Luminum Br opera com processos definidos,
-      controlados e documentados.
-      Cada etapa é pensada para garantir padrão, segurança
-      e repetibilidade.
-    </p>
+  <p>
+    Nossos processos seguem critérios técnicos rigorosos,
+    com foco em padronização, controle e melhoria contínua.
+  </p>
 
-    <h2>Etapas principais</h2>
+  <p>
+    Trabalhamos com seleção de matéria-prima,
+    inspeção de qualidade e rastreabilidade,
+    assegurando que cada lote entregue atenda
+    às especificações industriais exigidas.
+  </p>
 
-    <ul>
-      <li>Análise técnica da demanda</li>
-      <li>Definição de especificações</li>
-      <li>Controle de fornecimento</li>
-      <li>Verificação de qualidade</li>
-      <li>Entrega conforme padrão acordado</li>
-    </ul>
+  <p>
+    O compromisso da All Luminum Br é garantir
+    confiabilidade operacional, precisão e segurança
+    em todas as etapas.
+  </p>
 
-    <p>
-      Nosso compromisso é com a previsibilidade.
-      O cliente sabe exatamente o que recebe.
-    </p>
-  </section>
-</main>
+</section>
 
 <footer>
-  <p>
-    All Luminum Br CNPJ: 57.084.413/0001-19 |
-    📞 (16) 99785-7531 |
-    ✉️ vendas@allluminumbr.com |
-    São Carlos – SP – Brasil |
-    Todos os direitos reservados.
-  </p>
+  All Luminum Br CNPJ: 57.084.413/0001-19 |
+  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
+  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil |
+  Todos os direitos reservados.
 </footer>
+
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
+  WhatsApp
+</a>
+
+</body>
+</html>
