--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum Br</title>
+  <title>All Luminum Br | Soluções em Alumínio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="All Luminum Br – Soluções industriais em alumínio com qualidade, precisão e alto padrão técnico.">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header>
-  <div class="header-container">
-    <div class="logo">All Luminum Br</div>
+  <div class="container header-container">
+    <a href="index.html" class="logo">
+      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+    </a>
+
     <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="processos.html">Processos</a></li>
-      </ul>
+      <a href="index.html">Início</a>
+      <a href="empresa.html">Empresa</a>
+      <a href="atuacao.html">Atuação</a>
+      <a href="processos.html">Processos</a>
     </nav>
   </div>
 </header>
@@ -26,24 +28,18 @@
 <section class="hero">
   <div class="hero-content">
     <h1>Excelência em Alumínio Industrial</h1>
-    <p>
-      Soluções industriais com precisão técnica, alto padrão de qualidade
-      e compromisso com performance.
-    </p>
+    <p>Precisão, estrutura e compromisso técnico para atender o mercado nacional com alto padrão de qualidade.</p>
   </div>
 </section>
 
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+  📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
+  ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil | Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
 
 </body>
 </html>
