--- a/empresa.html
+++ b/empresa.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa - All Luminum Br</title>
+  <title>Empresa | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Conheça a história e estrutura da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header>
-  <div class="header-container">
-    <div class="logo">All Luminum Br</div>
+  <div class="container header-container">
+    <a href="index.html" class="logo">
+      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
+    </a>
     <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="processos.html">Processos</a></li>
-      </ul>
+      <a href="index.html">Início</a>
+      <a href="empresa.html">Empresa</a>
+      <a href="atuacao.html">Atuação</a>
+      <a href="processos.html">Processos</a>
     </nav>
   </div>
 </header>
 
-<section class="section">
-  <h2>Sobre a All Luminum</h2>
-  <p>
-    A All Luminum Br atua no setor industrial com foco em alumínio,
-    oferecendo soluções com alto padrão técnico, controle de qualidade
-    e compromisso com eficiência produtiva.
-  </p>
-
-  <p>
-    Nossa estrutura foi planejada para atender demandas industriais com
-    organização, rastreabilidade e processos bem definidos.
-  </p>
-
-  <p>
-    Trabalhamos com visão estratégica, responsabilidade técnica e foco
-    em relações comerciais duradouras.
-  </p>
+<section class="page">
+  <div class="container">
+    <h1>Sobre a All Luminum Br</h1>
+    <p>A All Luminum Br nasceu com o propósito de entregar soluções industriais em alumínio com alto padrão técnico, confiabilidade estrutural e excelência operacional.</p>
+    <p>Localizada em São Carlos – SP, atuamos com responsabilidade técnica, compromisso com prazos e foco total na qualidade dos materiais e processos.</p>
+    <p>Nossa estrutura foi desenvolvida para atender demandas industriais com precisão, segurança e consistência.</p>
+  </div>
 </section>
 
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+  📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
+  ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil | Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
 
 </body>
 </html>
