--- a/atuacao.html
+++ b/atuacao.html
@@ -1,62 +1,51 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação - All Luminum Br</title>
+  <title>Atuação | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Áreas de atuação da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header>
-  <div class="header-container">
+  <div class="container header-container">
     <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminumbr.png" alt="All Luminum Br" height="40">
+      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
     </a>
     <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="processos.html">Processos</a></li>
-      </ul>
+      <a href="index.html">Início</a>
+      <a href="empresa.html">Empresa</a>
+      <a href="atuacao.html">Atuação</a>
+      <a href="processos.html">Processos</a>
     </nav>
   </div>
 </header>
 
-<section class="section">
-  <h2>Área de Atuação</h2>
-
-  <p>
-    A All Luminum Br atua no fornecimento e comercialização de alumínio
-    para aplicações industriais diversas.
-  </p>
-
-  <p>
-    Atendemos empresas dos setores metalúrgico, construção civil,
-    indústria de transformação e segmentos que demandam matéria-prima
-    com controle dimensional e rastreabilidade.
-  </p>
-
-  <p>
-    Trabalhamos com foco em qualidade, entrega eficiente e suporte técnico,
-    garantindo segurança operacional e confiabilidade comercial.
-  </p>
-
+<section class="page">
+  <div class="container">
+    <h1>Áreas de Atuação</h1>
+    <p>Atendemos indústrias que exigem fornecimento técnico de alumínio com alto padrão de qualidade.</p>
+    <ul>
+      <li>Fornecimento de perfis de alumínio</li>
+      <li>Soluções para construção civil</li>
+      <li>Indústria metalúrgica</li>
+      <li>Projetos sob demanda</li>
+      <li>Distribuição para mercado industrial</li>
+    </ul>
+  </div>
 </section>
 
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+  📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
+  ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil | Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
 
 </body>
 </html>
