--- a/processos.html
+++ b/processos.html
@@ -1,64 +1,51 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Processos - All Luminum Br</title>
+  <title>Processos | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Processos industriais da All Luminum Br.">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header>
-  <div class="header-container">
+  <div class="container header-container">
     <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminumbr.png" alt="All Luminum Br" height="40">
+      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
     </a>
     <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="processos.html">Processos</a></li>
-      </ul>
+      <a href="index.html">Início</a>
+      <a href="empresa.html">Empresa</a>
+      <a href="atuacao.html">Atuação</a>
+      <a href="processos.html">Processos</a>
     </nav>
   </div>
 </header>
 
-<section class="section">
-  <h2>Processos e Qualidade</h2>
-
-  <p>
-    Nossos processos seguem critérios técnicos rigorosos,
-    com foco em padronização, controle e melhoria contínua.
-  </p>
-
-  <p>
-    Trabalhamos com seleção de matéria-prima,
-    inspeção de qualidade e rastreabilidade,
-    assegurando que cada lote entregue atenda
-    às especificações industriais exigidas.
-  </p>
-
-  <p>
-    O compromisso da All Luminum Br é garantir
-    confiabilidade operacional, precisão e segurança
-    em todas as etapas.
-  </p>
-
+<section class="page">
+  <div class="container">
+    <h1>Processos Industriais</h1>
+    <p>Nossos processos seguem rigor técnico e controle de qualidade em todas as etapas.</p>
+    <ul>
+      <li>Seleção criteriosa de matéria-prima</li>
+      <li>Controle dimensional</li>
+      <li>Padronização de acabamento</li>
+      <li>Logística organizada e rastreável</li>
+      <li>Compromisso com prazos e qualidade final</li>
+    </ul>
+  </div>
 </section>
 
 <footer>
   All Luminum Br CNPJ: 57.084.413/0001-19 |
-  <a href="https://wa.me/5516997857531" target="_blank">📞 (16) 99785-7531</a> |
-  <a href="mailto:vendas@allluminumbr.com">✉️ vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil |
-  Todos os direitos reservados.
+  📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
+  ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
+  São Carlos – SP – Brasil | Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">
-  WhatsApp
-</a>
+<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
 
 </body>
 </html>
