--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum Br | Soluções em Alumínio</title>
+  <title>All Luminum Br | Alumínio Industrial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="All Luminum Br – Soluções industriais em alumínio com qualidade, precisão e alto padrão técnico.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
   <div class="container header-container">
-    <a href="index.html" class="logo">
-      <img src="assets/imagens/logo-allluminum-branco.png" alt="All Luminum Br">
-    </a>
-
+    <div class="logo">
+      <a href="index.html">
+        <img src="assets/imagens/logo_all luminum_branco.png" alt="All Luminum Br">
+      </a>
+    </div>
     <nav>
       <a href="index.html">Início</a>
       <a href="empresa.html">Empresa</a>
@@ -25,10 +24,10 @@
   </div>
 </header>
 
-<section class="hero">
+<section class="hero hero-home">
   <div class="hero-content">
-    <h1>Excelência em Alumínio Industrial</h1>
-    <p>Precisão, estrutura e compromisso técnico para atender o mercado nacional com alto padrão de qualidade.</p>
+    <h1>Alumínio com precisão e responsabilidade industrial</h1>
+    <p>Atuamos no fornecimento e processamento de alumínio com padrão técnico elevado e compromisso com resultado.</p>
   </div>
 </section>
 
@@ -36,10 +35,12 @@
   All Luminum Br CNPJ: 57.084.413/0001-19 |
   📞 <a href="https://wa.me/5516997857531" target="_blank">(16) 99785-7531</a> |
   ✉️ <a href="mailto:vendas@allluminumbr.com">vendas@allluminumbr.com</a> |
-  São Carlos – SP – Brasil | Todos os direitos reservados.
+  São Carlos – SP – Brasil - Todos os direitos reservados.
 </footer>
 
-<a href="https://wa.me/5516997857531" class="whatsapp-float" target="_blank">WhatsApp</a>
+<a class="whatsapp-float" href="https://wa.me/5516997857531" target="_blank">
+  WhatsApp
+</a>
 
 </body>
 </html>
